; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zap_micro.c_zap_remove_by_dnode.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zap_micro.c_zap_remove_by_dnode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RW_WRITER = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zap_remove_by_dnode(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = load i32, i32* @RW_WRITER, align 4
  %13 = load i32, i32* @TRUE, align 4
  %14 = load i32, i32* @FALSE, align 4
  %15 = load i32, i32* @FTAG, align 4
  %16 = call i32 @zap_lockdir_by_dnode(i32* %10, i32* %11, i32 %12, i32 %13, i32 %14, i32 %15, i32** %8)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* %9, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i32, i32* %9, align 4
  store i32 %20, i32* %4, align 4
  br label %30

21:                                               ; preds = %3
  %22 = load i32*, i32** %8, align 8
  %23 = load i8*, i8** %6, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = call i32 @zap_remove_impl(i32* %22, i8* %23, i32 0, i32* %24)
  store i32 %25, i32* %9, align 4
  %26 = load i32*, i32** %8, align 8
  %27 = load i32, i32* @FTAG, align 4
  %28 = call i32 @zap_unlockdir(i32* %26, i32 %27)
  %29 = load i32, i32* %9, align 4
  store i32 %29, i32* %4, align 4
  br label %30

30:                                               ; preds = %21, %19
  %31 = load i32, i32* %4, align 4
  ret i32 %31
}

declare dso_local i32 @zap_lockdir_by_dnode(i32*, i32*, i32, i32, i32, i32, i32**) #1

declare dso_local i32 @zap_remove_impl(i32*, i8*, i32, i32*) #1

declare dso_local i32 @zap_unlockdir(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
